@@ -9,9 +9,9 @@ package com.hedera.services.context.domain.trackers;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -30,7 +30,6 @@ import org.apache.logging.log4j.Logger;
 import java.util.EnumMap;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class ConsensusStatusCounts {
 	private static final Logger log = LogManager.getLogger(ConsensusStatusCounts.class);
@@ -51,7 +50,7 @@ public class ConsensusStatusCounts {
 						.map(entry -> Map.of(
 								String.format("%s:%s", entries.getKey(), entry.getKey()),
 								entry.getValue().get())))
-				.collect(Collectors.toList());
+				.toList();
 		try {
 			return om.writerWithDefaultPrettyPrinter().writeValueAsString(asList);
 		} catch (JsonProcessingException unlikely) {
